--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "colors": "^1.4.0",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
   }
