--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mariadb": "^3.4.0",
     "nodemon": "^3.1.9"
   }
 }
